[LongNB] add current account to AccountService